빌드 오류 뜨는 현상 수정

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('/css/BinggraeMelona.css');
+@import url('static-folder/css/BinggraeMelona.css');
 
 @font-face {
   font-family: 'RIDIBatang';
